--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
 
             <div class="header-buttons">
-              <a href="#" target="_blank" class="btn btn-primary">Download CV</a>
+              <a href="css/fonts/cv_manoj.pdf" target="_blank" class="btn btn-primary">Download CV</a>
             </div>
 
             <div class="copyrights">© 2024 All rights reserved.Manoj Surigi</div>
