--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
             </div>
 
             <div class="header-buttons">
-              <a href="css/fonts/cv_manoj.pdf" target="_blank" class="btn btn-primary">Download CV</a>
-            </div>
+  <a href="css/fonts/cv_manoj.pdf" target="_blank" class="btn btn-primary" download="Manoj_Surigi_CV.pdf">Download CV</a>
+</div>
+
 
             <div class="copyrights">© 2024 All rights reserved.Manoj Surigi</div>
           </header>
