--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
-  
-<!-- Mirrored from lmpixels.com/demo/breezycv/dark/1/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 29 Nov 2024 11:41:47 GMT -->
+
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
@@ -12,7 +11,6 @@
     <meta name="author" content="lmpixels" />
     <link rel="shortcut icon" href="favicon.ico">
 
-
     <link rel="stylesheet" href="css/reset.css" type="text/css">
     <link rel="stylesheet" href="css/bootstrap-grid.min.css" type="text/css">
     <link rel="stylesheet" href="css/animations.css" type="text/css">
@@ -22,9 +20,9 @@
     <link rel="stylesheet" href="css/main.css" type="text/css">
 
     <script src="js/modernizr.custom.js"></script>
-  </head>
+</head>
 
-  <body>
+<body>
     <!-- Animated Background -->
     <div class="lm-animated-bg" style="background-image: url(img/main_bg.png);"></div>
     <!-- /Animated Background -->
@@ -39,118 +37,222 @@
     <!-- /Loading animation -->
 
     <div class="page">
-      <div class="page-content">
-
-          <header id="site_header" class="header mobile-menu-hide">
-            <div class="header-content">
-              <div class="header-photo">
-                <img src="img/main_photo.jpg" alt="Alex Smith">
-              </div>
-              <div class="header-titles">
-                <h2>Manoj Surigi</h2>
-                <h4>Web Designer</h4>
-              </div>
-            </div>
-
-            <ul class="main-menu">
-              <li class="active">
-                <a href="#home" class="nav-anim">
-                  <span class="menu-icon lnr lnr-home"></span>
-                  <span class="link-text">Home</span>
-                </a>
-              </li>
-              <li>
-                <a href="#about-me" class="nav-anim">
-                  <span class="menu-icon lnr lnr-user"></span>
-                  <span class="link-text">About Me</span>
-                </a>
-              </li>
-              <li>
-                <a href="#resume" class="nav-anim">
-                  <span class="menu-icon lnr lnr-graduation-hat"></span>
-                  <span class="link-text">Resume</span>
-                </a>
-              </li>
-              <li>
-                <a href="#portfolio" class="nav-anim">
-                  <span class="menu-icon lnr lnr-briefcase"></span>
-                  <span class="link-text">Portfolio</span>
-                </a>
-              </li>
-              <li>
-                <a href="#blog" class="nav-anim">
-                  <span class="menu-icon lnr lnr-book"></span>
-                  <span class="link-text">Blog</span>
-                </a>
-              </li>
-              <li>
-                <a href="#contact" class="nav-anim">
-                  <span class="menu-icon lnr lnr-envelope"></span>
-                  <span class="link-text">Contact</span>
-                </a>
-              </li>
-            </ul>
-
-            <div class="social-links">
-              <ul>
-                <li><a href="https://www.linkedin.com/in/manoj-surigi-37bb332a5?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-                <li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
-				<li><a href="https://www.instagram.com/manoj_s_m_k" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="https://wa.me/7013910820" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
-                <li><a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a></li>
-				
-              </ul>
-            </div>
-
-            <div class="header-buttons">
-  <a href="css/fonts/cv_manoj.pdf" target="_blank" class="btn btn-primary" download="Manoj_Surigi_CV.pdf">Download CV</a>
-</div>
-
-
-            <div class="copyrights">© 2024 All rights reserved.Manoj Surigi</div>
-          </header>
-
-          <!-- Mobile Navigation -->
-          <div class="menu-toggle">
-            <span></span>
-            <span></span>
-            <span></span>
-          </div>
-          <!-- End Mobile Navigation -->
-
-          <!-- Arrows Nav -->
-          <div class="lmpixels-arrows-nav">
-            <div class="lmpixels-arrow-right"><i class="lnr lnr-chevron-right"></i></div>
-            <div class="lmpixels-arrow-left"><i class="lnr lnr-chevron-left"></i></div>
-          </div>
-          <!-- End Arrows Nav -->
-
-          <div class="content-area">
-            <div class="animated-sections">
-              <!-- Home Subpage -->
-              <section data-id="home" class="animated-section start-page">
-                <div class="section-content vcentered">
-
-                    <div class="row">
-                      <div class="col-sm-12 col-md-12 col-lg-12">
-                        <div class="title-block">
-                          <h2>Manoj Surigi</h2>
-                          <div class="owl-carousel text-rotation">                                    
-                            <div class="item">
-                              <div class="sp-subtitle">Web Designer</div>
-                            </div>
-                            
-                            <div class="item">
-                              <div class="sp-subtitle">Frontend-developer</div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
+        <div class="page-content">
+            <header id="site_header" class="header mobile-menu-hide">
+                <div class="header-content">
+                    <div class="header-photo">
+                        <img src="img/main_photo.jpg" alt="Manoj Surigi">
                     </div>
-
+                    <div class="header-titles">
+                        <h2>Manoj Surigi</h2>
+                        <h4>Software Developer | Front-End Developer</h4>
+                    </div>
                 </div>
-              </section>
+
+                <ul class="main-menu">
+                    <li class="active">
+                        <a href="#home" class="nav-anim">
+                            <span class="menu-icon lnr lnr-home"></span>
+                            <span class="link-text">Home</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#about-me" class="nav-anim">
+                            <span class="menu-icon lnr lnr-user"></span>
+                            <span class="link-text">About Me</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#resume" class="nav-anim">
+                            <span class="menu-icon lnr lnr-graduation-hat"></span>
+                            <span class="link-text">Resume</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#portfolio" class="nav-anim">
+                            <span class="menu-icon lnr lnr-briefcase"></span>
+                            <span class="link-text">Portfolio</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#blog" class="nav-anim">
+                            <span class="menu-icon lnr lnr-book"></span>
+                            <span class="link-text">Blog</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#contact" class="nav-anim">
+                            <span class="menu-icon lnr lnr-envelope"></span>
+                            <span class="link-text">Contact</span>
+                        </a>
+                    </li>
+                </ul>
+
+                <div class="social-links">
+                    <ul>
+                        <li><a href="https://www.linkedin.com/in/manoj-surigi-37bb332a5?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                        <li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="https://www.instagram.com/manoj_s_m_k" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="https://wa.me/7013910820" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
+                        <li><a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a></li>
+                    </ul>
+                </div>
+
+                <div class="header-buttons">
+                    <a href="css/fonts/cv_manoj.pdf" target="_blank" class="btn btn-primary" download="Manoj_Surigi_CV.pdf">Download CV</a>
+                </div>
+
+                <div class="copyrights">© 2024 All rights reserved. Manoj Surigi</div>
+            </header>
+
+            <!-- Mobile Navigation -->
+            <div class="menu-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <!-- End Mobile Navigation -->
+
+            <!-- Arrows Nav -->
+            <div class="lmpixels-arrows-nav">
+                <div class="lmpixels-arrow-right"><i class="lnr lnr-chevron-right"></i></div>
+                <div class="lmpixels-arrow-left"><i class="lnr lnr-chevron-left"></i></div>
+            </div>
+            <!-- End Arrows Nav -->
+
+            <div class="content-area">
+                <div class="animated-sections">
+                    <!-- Home Subpage -->
+                    <section data-id="home" class="animated-section start-page">
+                        <div class="section-content vcentered">
+                            <div class="row">
+                                <div class="col-sm-12 col-md-12 col-lg-12">
+                                    <div class="title-block">
+                                        <h2>Manoj Surigi</h2>
+                                        <div class="owl-carousel text-rotation">                                      
+                                            <div class="item">
+                                                <div class="sp-subtitle">Software Developer</div>
+                                            </div>
+                                            <div class="item">
+                                                <div class="sp-subtitle">Frontend Developer</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <!-- End of Home Subpage -->
+
+                    <!-- About Me Subpage -->
+                    <section data-id="about-me" class="animated-section">
+                        <div class="page-title">
+                            <h2>About <span>Me</span></h2>
+                        </div>
+
+                        <div class="section-content">
+                            <!-- Personal Information -->
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-7">
+                                    <p>I’m Manoj Surigi, a Software Developer with a passion for crafting innovative solutions. With 2 years of experience, I design seamless software, develop impactful mobile apps, and ensure top-notch quality. Constantly evolving, I embrace new challenges and technologies. Let’s collaborate and bring bold ideas to life!</p>
+                                </div>
+
+                                <div class="col-xs-12 col-sm-5">
+                                    <div class="info-list">
+                                        <ul>
+                                            <li>
+                                                <span class="title">Age</span>
+                                                <span class="value">24</span>
+                                            </li>
+
+                                            <li>
+                                                <span class="title">Residence</span>
+                                                <span class="value">IN</span>
+                                            </li>
+
+                                            <li>
+                                                <span class="title">Address</span>
+                                                <span class="value">Hyderabad</span>
+                                            </li>
+
+                                            <li>
+                                                <span class="title">e-mail</span>
+                                                <span class="value">manojsurigi123@gmail.com</span>
+                                            </li>
+
+                                            <li>
+                                                <span class="title">Phone</span>
+                                                <span class="value">+91 7013910820</span>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- End of Personal Information -->
+
+                            <div class="white-space-50"></div>
+
+                            <!-- Services -->
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-12">
+                                    <div class="block-title">
+                                        <h3>What <span>I Do</span></h3>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-6">
+                                    <div class="col-inner">
+                                        <div class="info-list-w-icon">
+                                            <div class="info-block-w-icon">
+                                                <div class="ci-icon">
+                                                    <i class="lnr lnr-store"></i>
+                                                </div>
+                                                <div class="ci-text">
+                                                    <h4>Software Design</h4>
+                                                    <p>I design intuitive, user-friendly software interfaces that enhance user experience, streamline workflows, and improve overall functionality.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-xs-12 col-sm-6">
+                                    <div class="col-inner">
+                                        <div class="info-list-w-icon">
+                                            <div class="info-block-w-icon">
+                                                <div class="ci-icon">
+                                                    <i class="lnr lnr-tablet"></i>
+                                                </div>
+                                                <div class="ci-text">
+                                                    <h4>App Development</h4>
+                                                    <p>From ideation to deployment, I build and test mobile applications that deliver smooth, responsive, and impactful user experiences.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- End of Services -->
+                        </div>
+                    </section>
+                    <!-- End About Me -->
+
+                    <!-- Resume Subpage -->
+                    <section data-id="resume" class="animated-section">
+                        <div class="section-content">
+                            <div class="block-title">
+                                <h2>My <span>Resume</span></h2>
+                            </div>
+                            <div class="resume-timeline">
+                                <!-- Add your resume content here -->
+                            </div>
+                        </div>
+                    </section>
+                    <!-- End Resume Subpage -->
+
               <!-- End of Home Subpage -->
 
               <!-- About Me Subpage -->
