--- a/index.html
+++ b/index.html
@@ -69,19 +69,19 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#portfolio" class="nav-anim">
+                        <a href="#" class="nav-anim">
                             <span class="menu-icon lnr lnr-briefcase"></span>
                             <span class="link-text">Portfolio</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#blog" class="nav-anim">
+                        <a href="#" class="nav-anim">
                             <span class="menu-icon lnr lnr-book"></span>
                             <span class="link-text">Blog</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#contact" class="nav-anim">
+                        <a href="#" class="nav-anim">
                             <span class="menu-icon lnr lnr-envelope"></span>
                             <span class="link-text">Contact</span>
                         </a>
